[gd_scene load_steps=4 format=3 uid="uid://86v1qxanex1q"]

[ext_resource type="Script" uid="uid://4wrsjijrmhj7" path="res://scenes/chaos_bag.gd" id="1_dabfm"]
[ext_resource type="Texture2D" uid="uid://d38trexttdlqg" path="res://assets/chaos_bag.png" id="1_iedhf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dabfm"]
radius = 72.6911

[node name="ChaosBag" type="Area2D"]
script = ExtResource("1_dabfm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_dabfm")

[node name="BagSprite" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_iedhf")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
